k8s/ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shopnest-ingress
spec:
  ingressClassName: nginx

  rules:
    - http:
        paths:

          # Frontend
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80

          # Backend
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 5000

          # Prometheus 
          - path: /prometheus
            pathType: Prefix
            backend:
              service:
                name: prometheus-operated
                port:
                  number: 9090

          # Grafana 
          - path: /grafana
            pathType: Prefix
            backend:
              service:
                name: monitoring-grafana
                port:
                  number: 80
